more fixes again